--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <title>x11vis - an X11 visualizer</title>
-    <link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Cherry+Cream+Soda' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Cherry+Cream+Soda' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="design.css" type="text/css" />
   </head>
   <body>
@@ -17,7 +17,7 @@
 
 	<h2>Watch the Demo</h2>
 	<div class="iframe">
-	  <iframe src="http://www.youtube.com/embed/IvTcnyCCGVg" frameborder="0" allowfullscreen width="640" height="390"><br /></iframe>
+	  <iframe src="https://www.youtube.com/embed/IvTcnyCCGVg" frameborder="0" allowfullscreen width="640" height="390"><br /></iframe>
 	</div>
 
 	<h2>Description</h2>
